# lazy_foo

./: CMakeLists.txt  README.md
src/: main.cpp
